# blink-bird-id

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  index.js  package-lock.json  package.json  pyproject.toml
client/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/[date]/: clip-grid.tsx  page.tsx
client/app/settings/: page.tsx
client/lib/: db.ts
client/scripts/scheduled-publish/: index.js  package-lock.json  package.json
lib/: ai-provider.js  blink-manager.js  sqlite-storage.js  storage.js
scripts/: README.md  __init__.py  blink_manager.py
server/: .dockerignore  .env.example  Dockerfile  index.js  pyproject.toml
server/lib/: ai-provider.js  sqlite-storage.js  storage.js
