[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blink-bird-id"
version = "1.0.0"
description = "Node.js and Python application to orchestrate downloading recorded clips from Blink Smart Security and identifying birds using AI"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "David Stanich", email = "dstanich@gmail.com"}
]

dependencies = [
    "blinkpy==0.25.5",
    "python-dotenv==1.0.0",
    "aiohttp==3.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
]
